.vscode-server/data/logs/20260125T131603/exthost1/output_logging_20260125T131605/1-Code.log
[Running] node "/home/sihammohamud/fst/javascript/objects/object.js"
{ name: 'siham', age: 22, city: 'helsinki' }

[Done] exited with code=0 in 0.123 seconds

[Running] node "/home/sihammohamud/fst/javascript/objects/tempCodeRunnerFile.js"
/home/sihammohamud/fst/javascript/objects/tempCodeRunnerFile.js:1
console.log (person(name));
        ^

ReferenceError: person is not defined
    at Object.<anonymous> (/home/sihammohamud/fst/javascript/objects/tempCodeRunnerFile.js:1:9)
    at Module._compile (node:internal/modules/cjs/loader:1356:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1414:10)
    at Module.load (node:internal/modules/cjs/loader:1197:32)
    at Module._load (node:internal/modules/cjs/loader:1013:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:128:12)
    at node:internal/main/run_main_module:28:49

Node.js v18.19.1

[Done] exited with code=1 in 0.109 seconds

[Running] node "/home/sihammohamud/fst/javascript/objects/object.js"
siham

[Done] exited with code=0 in 0.113 seconds

[Running] node "/home/sihammohamud/fst/javascript/objects/object.js"
siham

[Done] exited with code=0 in 0.109 seconds

[Running] node "/home/sihammohamud/fst/javascript/objects/object.js"
/home/sihammohamud/fst/javascript/objects/object.js:9
console.log (person(name));
                    ^

ReferenceError: name is not defined
    at Object.<anonymous> (/home/sihammohamud/fst/javascript/objects/object.js:9:21)
    at Module._compile (node:internal/modules/cjs/loader:1356:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1414:10)
    at Module.load (node:internal/modules/cjs/loader:1197:32)
    at Module._load (node:internal/modules/cjs/loader:1013:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:128:12)
    at node:internal/main/run_main_module:28:49

Node.js v18.19.1

[Done] exited with code=1 in 0.263 seconds

[Running] node "/home/sihammohamud/fst/javascript/objects/object.js"
/home/sihammohamud/fst/javascript/objects/object.js:9
console.log (person[name]);
                    ^

ReferenceError: name is not defined
    at Object.<anonymous> (/home/sihammohamud/fst/javascript/objects/object.js:9:21)
    at Module._compile (node:internal/modules/cjs/loader:1356:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1414:10)
    at Module.load (node:internal/modules/cjs/loader:1197:32)
    at Module._load (node:internal/modules/cjs/loader:1013:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:128:12)
    at node:internal/main/run_main_module:28:49

Node.js v18.19.1

[Done] exited with code=1 in 0.108 seconds

[Running] node "/home/sihammohamud/fst/javascript/objects/object.js"
/home/sihammohamud/fst/javascript/objects/object.js:9
console.log (person[age]);
                    ^

ReferenceError: age is not defined
    at Object.<anonymous> (/home/sihammohamud/fst/javascript/objects/object.js:9:21)
    at Module._compile (node:internal/modules/cjs/loader:1356:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1414:10)
    at Module.load (node:internal/modules/cjs/loader:1197:32)
    at Module._load (node:internal/modules/cjs/loader:1013:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:128:12)
    at node:internal/main/run_main_module:28:49

Node.js v18.19.1

[Done] exited with code=1 in 0.101 seconds

[Running] node "/home/sihammohamud/fst/javascript/objects/object.js"
/home/sihammohamud/fst/javascript/objects/object.js:8
console.log (person[age]);
                    ^

ReferenceError: age is not defined
    at Object.<anonymous> (/home/sihammohamud/fst/javascript/objects/object.js:8:21)
    at Module._compile (node:internal/modules/cjs/loader:1356:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1414:10)
    at Module.load (node:internal/modules/cjs/loader:1197:32)
    at Module._load (node:internal/modules/cjs/loader:1013:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:128:12)
    at node:internal/main/run_main_module:28:49

Node.js v18.19.1

[Done] exited with code=1 in 0.112 seconds

[Running] node "/home/sihammohamud/fst/javascript/objects/object.js"
/home/sihammohamud/fst/javascript/objects/object.js:8
console.log (person[age]);
                    ^

ReferenceError: age is not defined
    at Object.<anonymous> (/home/sihammohamud/fst/javascript/objects/object.js:8:21)
    at Module._compile (node:internal/modules/cjs/loader:1356:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1414:10)
    at Module.load (node:internal/modules/cjs/loader:1197:32)
    at Module._load (node:internal/modules/cjs/loader:1013:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:128:12)
    at node:internal/main/run_main_module:28:49

Node.js v18.19.1

[Done] exited with code=1 in 1.083 seconds

[Running] node "/home/sihammohamud/fst/javascript/objects/object.js"
/home/sihammohamud/fst/javascript/objects/object.js:8
console.log (person(age));
                    ^

ReferenceError: age is not defined
    at Object.<anonymous> (/home/sihammohamud/fst/javascript/objects/object.js:8:21)
    at Module._compile (node:internal/modules/cjs/loader:1356:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1414:10)
    at Module.load (node:internal/modules/cjs/loader:1197:32)
    at Module._load (node:internal/modules/cjs/loader:1013:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:128:12)
    at node:internal/main/run_main_module:28:49

Node.js v18.19.1

[Done] exited with code=1 in 0.103 seconds

[Running] node "/home/sihammohamud/fst/javascript/objects/object.js"
/home/sihammohamud/fst/javascript/objects/object.js:8
console.log(person(age));
                   ^

ReferenceError: age is not defined
    at Object.<anonymous> (/home/sihammohamud/fst/javascript/objects/object.js:8:20)
    at Module._compile (node:internal/modules/cjs/loader:1356:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1414:10)
    at Module.load (node:internal/modules/cjs/loader:1197:32)
    at Module._load (node:internal/modules/cjs/loader:1013:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:128:12)
    at node:internal/main/run_main_module:28:49

Node.js v18.19.1

[Done] exited with code=1 in 0.106 seconds

[Running] node "/home/sihammohamud/fst/javascript/objects/object.js"
22

[Done] exited with code=0 in 0.107 seconds

[Running] node "/home/sihammohamud/fst/javascript/objects/object.js"

[Done] exited with code=0 in 0.355 seconds

[Running] node "/home/sihammohamud/fst/javascript/objects/object.js"
{}

[Done] exited with code=0 in 0.145 seconds

[Running] node "/home/sihammohamud/fst/javascript/objects/object.js"
{ type: 'dog' }

[Done] exited with code=0 in 0.116 seconds

[Running] node "/home/sihammohamud/fst/javascript/objects/object.js"
[String: 'crocodile'] { type: 'dog' }

[Done] exited with code=0 in 0.12 seconds

[Running] node "/home/sihammohamud/fst/javascript/objects/object.js"
{ type: 'dog', bread: 'hergab hhhh' }

[Done] exited with code=0 in 0.108 seconds

[Running] node "/home/sihammohamud/fst/javascript/objects/object.js"
/home/sihammohamud/fst/javascript/objects/object.js:29
let animal = {}
    ^

SyntaxError: Identifier 'animal' has already been declared
    at internalCompileFunction (node:internal/vm:73:18)
    at wrapSafe (node:internal/modules/cjs/loader:1274:20)
    at Module._compile (node:internal/modules/cjs/loader:1320:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1414:10)
    at Module.load (node:internal/modules/cjs/loader:1197:32)
    at Module._load (node:internal/modules/cjs/loader:1013:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:128:12)
    at node:internal/main/run_main_module:28:49

Node.js v18.19.1

[Done] exited with code=1 in 0.123 seconds

[Running] node "/home/sihammohamud/fst/javascript/objects/tempCodeRunnerFile.js"

[Done] exited with code=0 in 0.107 seconds

[Running] node "/home/sihammohamud/fst/javascript/objects/tempCodeRunnerFile.js"
/home/sihammohamud/fst/javascript/objects/tempCodeRunnerFile.js:6
// }
    

SyntaxError: Unexpected end of input
    at internalCompileFunction (node:internal/vm:73:18)
    at wrapSafe (node:internal/modules/cjs/loader:1274:20)
    at Module._compile (node:internal/modules/cjs/loader:1320:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1414:10)
    at Module.load (node:internal/modules/cjs/loader:1197:32)
    at Module._load (node:internal/modules/cjs/loader:1013:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:128:12)
    at node:internal/main/run_main_module:28:49

Node.js v18.19.1

[Done] exited with code=1 in 0.299 seconds

[Running] node "/home/sihammohamud/fst/javascript/objects/object.js"
{}

[Done] exited with code=0 in 0.119 seconds

[Running] node "/home/sihammohamud/fst/javascript/objects/object.js"
{ type: 'boy', bread: 'girl' }

[Done] exited with code=0 in 0.115 seconds

[Running] node "/home/sihammohamud/fst/javascript/objects/object.js"
20

[Done] exited with code=0 in 0.42 seconds

[Running] node "/home/sihammohamud/fst/javascript/objects/object.js"
{ name: 'siham', age: 20, city: 'helsinki' }

[Done] exited with code=0 in 0.112 seconds

[Running] node "/home/sihammohamud/fst/javascript/objects/object.js"
siham

[Done] exited with code=0 in 0.443 seconds

